--- a/BBDDEthazi/.classpath
+++ b/BBDDEthazi/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libreria/App.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
