--- a/BBDDEthazi/.classpath
+++ b/BBDDEthazi/.classpath
@@ -6,5 +6,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="librerias/commons-dbcp2-2.6.0.jar"/>
+	<classpathentry kind="lib" path="librerias/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="librerias/commons-pool2-2.6.2.jar"/>
+	<classpathentry kind="lib" path="librerias/mysql-connector-java-8.0.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
